--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
-Revision history for Variant-Analyzer.
+Revision history for CooVar.
 
+0.03  Thu Jul 19 14:00:00 2012
+    - program name change from "Variant-Analyzer" to "CooVar"
+    - performance improvements in apply-insertions-deletions.pl by using interval trees to look for GV/exon overlap
 0.02  Mon Nov 21 13:00:00 2011
 	- added variant_type to GVF output
 0.01  Tue Feb 15 13:00:00 2011
