fixed bug on three-frame translation of exons < 3 bp; new test script

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for CooVar.
 
+latest
+	- extract_cDNA.pl: get_pep(): use Bio::Seq->translate instead of Bio::SeqUtils->translate_3frames because 3-frame translation throws exception for exons with length < 3
+	- new test script test/test_elegans.sh
 0.03  Thu Jul 19 14:00:00 2012
     - program name change from "Variant-Analyzer" to "CooVar"
     - performance improvements in apply-insertions-deletions.pl by using interval trees to look for GV/exon overlap
