--- a/README
+++ b/README
@@ -96,13 +96,12 @@ were applied to the transcripts.
 
 CooVar takes the following input:
 
-(5.1) A gff3/gtf file with coding_exon sequences
+(5.1) A gff3/gtf file specifying coding exons in form of CDS (coding-sequence) entries
 
 Parameter: -e
-Each coding exon should represent a part of a protein-coding transcript, and 
-should exclude UTRs. 
+Each coding exon represents a part of a protein-coding transcript and excludes UTRs. 
 
-Example1: transcript 2L52.1 in C. elegans in gff3 format:
+Example 1: transcript 2L52.1 in C. elegans in gff3 format:
 
 II      Coding_transcript       CDS     1867    1911    .       +       0       ID=CDS:2L52.1;Note=Zinc finger%2C C2H2;gene=2L52.1 
 II      Coding_transcript       CDS     2506    2694    .       +       0       ID=CDS:2L52.1;Note=Zinc finger%2C C2H2;gene=2L52.1 
@@ -112,7 +111,7 @@ II      Coding_transcript       CDS     3406    3552    .       +       1       
 II      Coding_transcript       CDS     3802    3984    .       +       1       ID=CDS:2L52.1;Note=Zinc finger%2C C2H2;gene=2L52.1 
 II      Coding_transcript       CDS     4201    4663    .       +       1       ID=CDS:2L52.1;Note=Zinc finger%2C C2H2;gene=2L52.1
  
-Example2: transcript ENST00000371026 in Human, in gtf format:
+Example 2: transcript ENST00000371026 in Human, in gtf format:
 
 chr1    hg18_ensGene    CDS     67052404        67052451        0.000000        -       0       gene_id "ENST00000371026"; transcript_id "ENST00000371026"; 
 chr1    hg18_ensGene    CDS     67060632        67060788        0.000000        -       1       gene_id "ENST00000371026"; transcript_id "ENST00000371026"; 
@@ -132,11 +131,11 @@ chr1    hg18_ensGene    CDS     67131500        67131684        0.000000        
 chr1    hg18_ensGene    CDS     67143472        67143646        0.000000        -       1       gene_id "ENST00000371026"; transcript_id "ENST00000371026"; 
 chr1    hg18_ensGene    CDS     67162933        67163102        0.000000        -       0       gene_id "ENST00000371026"; transcript_id "ENST00000371026"; 
 
-IMPORTANT: Note that there are NO EXTRA LINES regarding gene/5_prime_UTR/3_prime_UTR/etc in the GFF/GTF input file, and different 
-           exons belonging to the same transcript have the same ID.
+IMPORTANT: Note that CooVar ignores all lines in the exon file that are not of type 'CDS' (this is currently hardcoded in the CooVar perl scripts). 
+           Also, make sure that different coding exons belonging to the same transcript have the same ID.
 
 If the gene attribute is specified ('gene=' in gff3 or 'gene_id' in gtf) then this gene ID is carried over to the CV_transcripts.gff3
-output file, which is useful if one wants to know the identity of genes effected by GVs in addition to transcripts IDs.  
+output file. This is useful if one wants to know the identity of genes effected by GVs in addition to affected transcripts.  
 
 As you can see, the relevant columns are 
 
