--- a/README
+++ b/README
@@ -70,11 +70,11 @@ and returns, for each transcript,
 CooVar pursues the following steps:
 
 (4.0) Revises the GV file in order to make sure that they follow the specified format (VCF or TAB). SNV and INS involving non-ACTG are 
-discarded. Lines not following the specified format are discarded. (revise-GV-files.pl)
-(4.1) Extracts the cDNA for each transcript from the genomic DNA, using the transcript model coordinates, (extract-cDNA.pl)
-(4.2) Applies SNPs to the cDNA (apply-SNPs.pl)
-(4.3) Categorizes SNPs according to its impact (or not) on protein-coding transcripts (categorize-SNPs.pl).
-(4.4) Computes stats on SNPs (get-stats-SNPs.pl)
+discarded. Lines not following the specified format are discarded. (revise-gv-files.pl)
+(4.1) Extracts the cDNA for each transcript from the genomic DNA, using the transcript model coordinates, (extract-cdna.pl)
+(4.2) Applies SNPs to the cDNA (apply-snps.pl)
+(4.3) Categorizes SNPs according to its impact (or not) on protein-coding transcripts (categorize-snps.pl).
+(4.4) Computes stats on SNPs (get-stats-snps.pl)
 (4.5) Applies Insertions and Deletions to the cDNA sequences, and computes stats of length distribution 
 (apply-insertions-deletions.pl)
 (4.6) If the --circos flag is used, it generates the input files for a 
@@ -134,7 +134,7 @@ chr1    hg18_ensGene    CDS     67162933        67163102        0.000000        
 IMPORTANT: Note that CooVar ignores all lines in the exon file that are not of type 'CDS' (this is currently hardcoded in the CooVar perl scripts). 
            Also, make sure that different coding exons belonging to the same transcript have the same ID.
 
-If the gene attribute is specified ('gene=' in gff3 or 'gene_id' in gtf) then this gene ID is carried over to the CV_transcripts.gff3
+If the gene attribute is specified ('gene=' in gff3 or 'gene_id' in gtf) then this gene ID is carried over to the transcripts.gff3
 output file. This is useful if one wants to know the identity of genes effected by GVs in addition to affected transcripts.  
 
 As you can see, the relevant columns are 
@@ -238,37 +238,37 @@ TRANSCRIPTS: gff3 file with the coding exon coordinates
 
 The output of CooVar ("CV") is structured as follows:
 .
-|-- CV_transcripts.gff3: transcripts, GVs impacting them, status of the ORF. See description in section 6.1 below
-|-- CV_categorized_GVs.gvf: each GV and its impact (or not, if silent) on all transcripts. See description in section 6.1 below
-|-- CV_Deletions
+|-- transcripts.gff3: transcripts, GVs impacting them, status of the ORF. See description in section 6.1 below
+|-- categorized-gvs.gvf: each GV and its impact (or not, if silent) on all transcripts. See description in section 6.1 below
+|-- deletions
 |   |-- distribution_deletions.out: length distribution of all deletions and of those deletions impacting exons.
-|   |-- excluded_GVs.CV_DEL: deletions excluded from the input for not accomplishing the specified format.
-|   |-- kept_GVs.CV_DEL: deletions kept from the input. The ones to be applied to the transcripts. 
-|   `-- kept_GVs.CV_DEL.circos: Circos frequency file for deletions. Designed for heatmap visualization.
-|-- CV_Insertions
+|   |-- excluded_GVs.del: deletions excluded from the input for not accomplishing the specified format.
+|   |-- kept_GVs.del: deletions kept from the input. The ones to be applied to the transcripts. 
+|   `-- kept_GVs.del.circos: Circos frequency file for deletions. Designed for heatmap visualization.
+|-- insertions
 |   |-- distribution_insertions.out: length distribution of all insertions and of those insertions impacting exons.
-|   |-- excluded_GVs.CV_INS: insertions excluded from the input for not accomplishing the specified format.
-|   |-- kept_GVs.CV_INS: deletions kept from the input. The ones to be applied to the transcripts.
-|   `-- kept_GVs.CV_INS.circos: Circos frequency file for insertions. Designed for heatmap visualization.
-|-- CV_SNPs
-|   |-- ambiguous_SNPs.list: SNPs that fall into 2 or more categories by impacting transcripts differently
-|   |-- categorized_SNPs.stat: overall and chromosomal frequencies of SNPs per category.
+|   |-- excluded_GVs.ins: insertions excluded from the input for not accomplishing the specified format.
+|   |-- kept_GVs.ins: deletions kept from the input. The ones to be applied to the transcripts.
+|   `-- kept_GVs.ins.circos: Circos frequency file for insertions. Designed for heatmap visualization.
+|-- snps
+|   |-- ambiguous_snps.list: SNPs that fall into 2 or more categories by impacting transcripts differently
+|   |-- categorized_snps.stat: overall and chromosomal frequencies of SNPs per category.
 |   |-- codon_bias.stat: frequency of the location of the SNP within the codon (1,2, or 3) and its impact as syn/non-syn 
-|   |-- excluded_GVs.CV_SNP: SNPs excluded from the input for not accomplishing the specified format.
-|   |-- kept_GVs.list.CV_SNP: SNPs kept from the input. The ones to be applied to the transcripts. 
-|   `-- kept_GVs.list.CV_SNP.circos: Circos frequency file for deletions. Designed for heatmap visualization.
-|-- CV_Transcripts
-|   |-- reference_cDNA.exons: reference cDNA shown per exon, per transcript.
-|   |-- variant_cDNA.exons: variant cDNA shown per exon, per transcript.
-|   |-- reference_cDNA.fasta: reference cDNA for each transcript.
-|   |-- variant_cDNA.fasta: variant cDNA for each transcript.
+|   |-- excluded_GVs.snp: SNPs excluded from the input for not accomplishing the specified format.
+|   |-- kept_GVs.list.snp: SNPs kept from the input. The ones to be applied to the transcripts. 
+|   `-- kept_GVs.list.snp.circos: Circos frequency file for deletions. Designed for heatmap visualization.
+|-- transcripts
+|   |-- reference_cdna.exons: reference cDNA shown per exon, per transcript.
+|   |-- variant_cdna.exons: variant cDNA shown per exon, per transcript.
+|   |-- reference_cdna.fasta: reference cDNA for each transcript.
+|   |-- variant_cdna.fasta: variant cDNA for each transcript.
 |   |-- reference_peptides.fasta: reference peptide for each transcript.
 |   |-- variant_peptides.fasta: variant peptide for each transcript.
 |   |-- reference_variant.alignment: alignment of the reference and variant (i.e. all GVs applied) cDNA
 |   |-- exons_nuclear_DNA.gff3.circos: Circos frequency file for exons on a bp basis. Designed for heatmap visualization.
 |   `-- variant.stat: distribution of early stop codons along proteins, frequency of different ORF status and summary of impact of GVs on transcripts
 
-(6.1) CV_transcripts.gff3 and CV_categorized_GVs.gvf
+(6.1) transcripts.gff3 and categorized-gvs.gvf
  
 The Generic Feature Format Version 3 (GFF3) is a widely used and accepted format for representing genomic features such as trnascript 
 models and others. The Genome Variation Format (GVF) is an extension of GFF3 and it is designed to 
@@ -279,9 +279,9 @@ http://www.sequenceontology.org/
 
 Given this, CooVar provides two outputs:
 
-(6.1.1) CV_transcripts.gff3
+(6.1.1) transcripts.gff3
 
-An example of a transcript in the CV_transcript.gff3 file is shown here:
+An example of a transcript in the transcripts.gff3 file is shown here:
 
 chr20   CooVar        mRNA    11790883        11830259        .       -       .       ID=ENST00000427835;Note=snp_746931(conservative_missense_codon),ins_66552,del_83066,ORF_DISRUPTED(15.53)
 chr20   CooVar        coding_exon     11790883        11791087        .       -       .       Parent=ENST00000427835
@@ -306,11 +306,11 @@ the reference.
 FULLY_DELETED: the variant transcript is such that only two, one or zero base pairs of the coding region remain after a deletion 
 event.
 
-Note: the information associated to each GV listed in the GFF3 file (e.g. snp_746931) can be found in the CV_categorized_GVs.gvf file.
+Note: the information associated to each GV listed in the GFF3 file (e.g. snp_746931) can be found in the categorized-gvs.gvf file.
 
-(6.1.2) CV_categorized_GVs.gvf
+(6.1.2) categorized-gvs.gvf
 
-An example of a SNV, INS and DEL in the CV_categorized_GVs.gvf file is shown:
+An example of a SNV, INS and DEL in the categorized-gvs.gvf file is shown:
 
 chr15   CooVar        SNV     80988136        80988136        .       +       .       ID=snp_14204;
 Variant_seq=G;Reference_seq=C;Variant_effect=non_conservative_missense_codon 0 mRNA ENST00000258884,ENST00000424700;
@@ -323,15 +323,13 @@ chr14   CooVar        deletion        94935764        94935766        .       + 
 In column 8:
 - Variant_seq represents the variant sequence for this GV.
 - Reference_seq represents the reference sequence for each GV.
-- Variant_effect represents the effect that this GV has TOGETHER WITH ALL OTHER GVs IMPACTING THIS TRANSCRIPT according to the GVF 
-format. Hence, if a (for example) 
-deletion by itself disrupts the ORF of the transcript, but the ORF is restored by an insertion downstream, then the Variant_effect 
-field will be "inframe_variant". All GVs impacting a transcript are found in the corresponding GFF3 file.
+- Variant_effect represents the predicted effect of this GV on the ORF (e.g. stop gained, synonymous, conservative_missense, non_conservative_missense, etc.) 
+format. All GVs impacting a transcript are found in the corresponding GFF3 file.
 - The "Note=" tag for SNPs can be lengthy and it displays the following information:
 -- codon_reference>codon_variant. Note that this codon can come from the + or - strand of the genomic DNA. 
 -- aa_reference>aa_variant.
 -- location of the SNP within the codon (1,2 or 3).
--- functional impact of the amino acid change for mis-sense mutations together with the associated Grantham Scorein parenthesis.
+-- functional impact of the amino acid change for mis-sense mutations together with the associated Grantham Score in parenthesis.
 
 
 (7) TIPS FOR RUNNING COOVAR FASTER
@@ -341,5 +339,5 @@ Some steps of CooVar can take time when run on very large (human sized) data fil
 CooVar should return results in a reasonable amount of time (~1h). One way to speed up execution is to run 
 CooVar for different chromosomes separately. Also, consider commenting out lines in the coovar.pl script
 if re-running a particular step of the analysis is not required. For example, by commenting out the line executing
-the 'extract-cDNA.pl' script, CooVar would not extract cDNA sequences when it is run again, using existing output
+the 'extract-cdna.pl' script, CooVar would not extract cDNA sequences when it is run again, using existing output
 files from previous runs.
